// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HTML adapter can be constructed WITHOUT attributes 1`] = `
Object {
  "align": "left",
  "html": null,
}
`;

exports[`HTML adapter construct builds with attributes 1`] = `
Object {
  "align": "center",
  "html": "html",
}
`;

exports[`HTML adapter toJSON builds a JSON representation 1`] = `
Object {
  "content": Object {
    "align": "center",
    "html": "html",
  },
}
`;
